# ios-opencv-svm

./: .gitignore  README.md
CVSVMTest/: AppDelegate.h  AppDelegate.m  SVMLoadTester.cpp  SVMLoadTester.hpp  ViewController.h  ViewController.m  main.m
CVSVMTest.xcodeproj/: project.pbxproj
CVSVMTest.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
CVSVMTestTests/: CVSVMTestTests.m
CVSVMTestUITests/: CVSVMTestUITests.m
OSXLoad/: CMakeLists.txt  svm.xml
OSXLoad/src/: CMakeLists.txt  main.cpp
